# gala-tui

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  STRUCTURE.md  advanced.gala  advanced_test.gala  animation.gala  animation_test.gala  async_test.gala  buffer.gala  calendar.gala  calendar_test.gala  cancellable.gala  cancellable_test.gala  cleanup_guard.go  click_dispatch_test.gala  cmd_helpers.gala  cmd_helpers_test.gala  color.gala  compact_widgets.gala  compact_widgets_test.gala  console_setup_other.go  console_setup_windows.go  conversation_log.gala  conversation_log_test.gala  core.gala  datatable.gala  datatable_test.gala  dev_ux.gala  dev_ux_test.gala  diff_test.gala  diff_view.gala  diff_view_test.gala  disclosure.gala  filebrowser.gala  filebrowser_test.gala  (+77 more)
.github/workflows/: ci.yml
demo/: main.gala  megademo.gala  megademo_test.gala  showcase_app.gala  showcase_app_test.gala  showcase_test.gala
docs/: COOKBOOK.md  GETTING_STARTED.md  TESTING.md  WIDGETS.md
examples/chat/: main.gala  main_test.gala
examples/clickable_list/: main.gala
examples/counter/: main.gala
examples/custom_widget/: main.gala
harness/: focus_builder_test.gala  focus_test_helpers.gala  harness.gala  widget_focus_test.gala
state/: BUILD.bazel  animation.gala  animation_test.gala  click_region.gala  click_region_test.gala  focus.gala  focus_router.gala  focus_router_test.gala  focus_test.gala  router.gala  router_test.gala
